--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <p>Our website uses an interactive methodology of teaching Maths using the latest web technologies. Your learning experience with us is guaranteed to be intuitive and fun. You will have fun while learning. This is the secret of our outstanding results. Check reviews from our students.</p>
         </div>
     <div id="leftbar" class="sidebar">
-        <h3>GO to:</h3>s
+        <h3>GO to:</h3>
         <ul>
         <li><a href="#">Year 1 Free Lessons</a></li>
             <li><a href="#">Year 2 Free Lessons</a></li>
@@ -57,7 +57,7 @@
             <ul>
             <li><a href="#">Our teachers are available any time.</a></li>
                 <li><a href="#">Available on laptop. Tablets and Phones</a></li>
-                <li><a href="#">30 day Money Back Garauntee..</a></li>
+                <li><a href="#">30 day Money Back Garauntee.</a></li>
                 <li><a href="#">Interactive games for an enjyoable learning experience.</a></li>
                 <li><a href="#">Learn at your own pace.</a></li>
                 <li><a href="#">Complete curriculum.</a></li>
